# ENPM808X_Midterm

./: .project  .travis.yml  CMakeLists.txt  install-ThirdParty.sh  numpyInc.py  plotRobotTraj.py  readme.md
app/: CMakeLists.txt  Coordinate.cpp  DHTable.cpp  Demo.cpp  IJoint.cpp  InverseKinematics.cpp  PrismaticJoint.cpp  RevoluteJoint.cpp  StraightLinePath.cpp  main.cpp
docs/html/: _coordinate_8hpp_source.html  _d_h_table_8hpp_source.html  _demo_8hpp_source.html  _i_joint_8hpp_source.html  _i_path_planner_8hpp_source.html  _inverse_kinematics_8hpp_source.html  _prismatic_joint_8hpp_source.html  _revolute_joint_8hpp_source.html  _straight_line_path_8hpp_source.html  annotated.html  class_coordinate-members.html  class_coordinate.html  class_d_h_table-members.html  class_d_h_table.html  class_demo-members.html  class_demo.html  class_i_joint-members.html  class_i_joint.html  class_i_path_planner-members.html  class_i_path_planner.html  class_inverse_kinematic_acme_arm-members.html  class_inverse_kinematic_acme_arm.html  class_inverse_kinematics_base-members.html  class_inverse_kinematics_base.html  class_prismatic_joint-members.html  class_prismatic_joint.html  class_revolute_joint-members.html  class_revolute_joint.html  class_straight_line_path-members.html  class_straight_line_path.html  classes.html  dir_17ce27c25b11349f8d23bc6a7cc9b503.html  dir_215b4fc08f709a4275e200616b18a6b1.html  dir_ab057e636730ff62440f9e8b8d92c259.html  dir_ae975681acc510e3c6e4c4c9118acaf8.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  (+5 more)
docs/latex/: annotated.tex  class_coordinate.tex  class_d_h_table.tex  class_demo.tex  class_i_joint.tex  class_i_path_planner.tex  class_inverse_kinematic_acme_arm.tex  class_inverse_kinematics_base.tex  class_prismatic_joint.tex  class_revolute_joint.tex  class_straight_line_path.tex  hierarchy.tex  md__c_1__users_ethan__desktop__doxygen__environment__e_n_p_m808_x__midterm-master_readme.tex  refman.tex  (+1 more)
include/: Coordinate.hpp  DHTable.hpp  Demo.hpp  IJoint.hpp  IPathPlanner.hpp  InverseKinematics.hpp  PrismaticJoint.hpp  RevoluteJoint.hpp  StraightLinePath.hpp  lib.hpp
results/: cppCheck.txt  cppLint.txt
test/: CMakeLists.txt  CoordinateTest.cpp  DHTableTest.cpp  InverseKinematicsTest.cpp  PrismaticJointTest.cpp  StraightLinePathTest.cpp
(+28 files in other folders)
